# artifacts/api-server/src/routes/index.ts
@@ -8,6 +8,7 @@ import cameraRouter from "./camera";
 import telemetryRouter from "./telemetry";
 import mapRouter from "./map";
 import homeRouter from "./home";
+import operatorRouter from "./operator";
 
 const router: IRouter = Router();
 
@@ -20,5 +21,6 @@ router.use(cameraRouter);
 router.use(telemetryRouter);
 router.use(mapRouter);
 router.use(homeRouter);
+router.use(operatorRouter);
 
 export default router;
